--- a/page-depth-01/Curated-Resources.html
+++ b/page-depth-01/Curated-Resources.html
@@ -139,7 +139,7 @@
         }
 
         .popup-close:hover {
-            background-color: rgba(100, 100, 150, 0.6);
+            background-color: #424242;
         }
 
         .popup-close::before,
@@ -148,7 +148,7 @@
             position: absolute;
             width: 15px;
             height: 2px;
-            background-color: #d8d8ff;
+           background-color: #424242;
         }
 
         .popup-close::before {
