--- a/index.html
+++ b/index.html
@@ -133,10 +133,10 @@
           alt="Facebook Group (oUITS - Online Resources)" width="70" height="70"></a>
 
       <!-- ANON NOTE (FEEDBACK) -->
-      <p align=center style="color:rgba(0, 0, 0, 0);"><a href="https://forms.gle/9BPzJRNz1rmaPh3Q8" target="_blank"
+      <p align=center style="color:rgba(0, 0, 0, 0);"><a href="https://forms.gle/onaybVpkL7Ud5hH37" target="_blank"
           style="color:rgba(0, 0, 0, 0.818);">Leave a
           note?</a>..<a
-          href="https://docs.google.com/spreadsheets/d/1G5Fn-z3ML3m7OskaPaJ9sh-4R-C6udKUx6-11znQXoI/edit?usp=sharing"
+          href="https://docs.google.com/spreadsheets/d/1LnARUrE4lSPWi1w4Iw-kMl8nouB2F8UTn6Z8zvE0wGo/edit?usp=sharing"
           target="_blank" style="color:rgb(0, 0, 0);"><small>👀 </small></a><br><br>...........................<small><a href=abstraction/wip.html
             style="color:rgba(74, 170, 214, 0.499);color:rgba(0, 0, 0, 0.071);">wip?</a></small></p>
 
