--- a/page-depth-01/Curated-Resources.html
+++ b/page-depth-01/Curated-Resources.html
@@ -47,10 +47,10 @@
 
         .menu-button {
             background-color: #00000000;
-  border-radius: 8px;
-  padding: 12px;
-  transition: background-color 0.3s ease;
-            position: absolute;
+            border-radius: 8px;
+            padding: 12px;
+            transition: background-color 0.3s ease;
+            /* position: absolute; */
             /* top: 20px;
             right: 20px;
             width: 40px;
@@ -148,7 +148,7 @@
             position: absolute;
             width: 15px;
             height: 2px;
-           background-color: #424242;
+            background-color: #424242;
         }
 
         .popup-close::before {
@@ -377,14 +377,14 @@
 
         <table class="resources-table-5" align=center style="width:90%;">
             <tr>
-                <td>
-                        <p id="menuButton" class="menu-button" align="center" style="color: rgba(240, 248, 255, 0.85);">People I want to keep
-                            following</p>
-                    
+                <td id="menuButton" class="menu-button" align="center" style="color: rgba(240, 248, 255, 0.85);">
+                    <p>People I want to keep
+                        following</p>
+
                 </td>
 
             </tr>
-            
+
         </table>
     </div>
 
