--- a/abstraction/archive.html
+++ b/abstraction/archive.html
@@ -30,6 +30,255 @@
       /* Scale from top-left corner */
     }
   </style>
+  
+  <!-- STYLE FOR POPUP MENU -->
+     <style>
+      /* body {
+          font-family: Arial, sans-serif;
+          margin: 0;
+          padding: 0;
+          background-color: #333;
+          color: #fff;
+      } */
+
+      .container-5 {
+
+          border-radius: 15px;
+          padding: 25px;
+          margin: 20px auto;
+          width: 79%;
+          max-width: 800px;
+          box-shadow: 0 4px 15px rgba(0, 0, 0, 0.3);
+          /*the button visibility*/
+          position: relative;
+          background-color: #000000c5;
+
+      }
+
+      .drive-link-5 {
+          margin-bottom: 20px;
+      }
+
+      .drive-link-5 a {
+          color: #b8b8e5;
+          text-decoration: none;
+          transition: color 0.3s ease;
+      }
+
+      .drive-link-5 a:hover {
+          color: #ffffff;
+      }
+
+      .menu-button {
+          background-color: #00000000;
+          border-radius: 8px;
+          padding: 12px;
+          transition: background-color 0.3s ease;
+          /* position: absolute; */
+          /* top: 20px;
+          right: 20px;
+          width: 40px;
+          height: 40px; */
+          /* background-color: rgba(80, 80, 120, 0.8); */
+          /* border-radius: 50%; */
+          cursor: pointer;
+          display: flex;
+          flex-direction: column;
+          justify-content: center;
+          align-items: center;
+          gap: 5px;
+          box-shadow: 0 2px 8px rgba(0, 0, 0, 0.2);
+          z-index: 100;
+          transition: background-color 0.3s ease;
+      }
+
+      .menu-button:hover {
+          background-color: rgba(100, 100, 150, 0.9);
+      }
+
+      .menu-line {
+          width: 20px;
+          height: 2px;
+          background-color: #d8d8ff;
+          transition: all 0.3s ease;
+      }
+
+      .menu-button:hover .menu-line {
+          background-color: #ffffff;
+      }
+
+      .menu-button.active .menu-line:nth-child(1) {
+          transform: translateY(7px) rotate(45deg);
+      }
+
+      .menu-button.active .menu-line:nth-child(2) {
+          opacity: 0;
+      }
+
+      .menu-button.active .menu-line:nth-child(3) {
+          transform: translateY(-7px) rotate(-45deg);
+      }
+
+      /* Modal Popup */
+      .popup-menu {
+          position: fixed;
+          top: 50%;
+          left: 50%;
+          transform: translate(-50%, -50%) scale(0.9);
+          width: 80%;
+          max-width: 600px;
+          max-height: 80vh;
+          background-color: rgba(50, 50, 70, 0.95);
+          border-radius: 15px;
+          box-shadow: 0 4px 25px rgba(0, 0, 0, 0.5);
+          z-index: 999;
+          opacity: 0;
+          visibility: hidden;
+          transition: all 0.3s cubic-bezier(0.165, 0.84, 0.44, 1);
+          display: flex;
+          flex-direction: column;
+          padding: 30px;
+          overflow-y: auto;
+      }
+
+      .popup-menu.open {
+          opacity: 1;
+          visibility: visible;
+          transform: translate(-50%, -50%) scale(1);
+      }
+
+      .popup-close {
+          position: absolute;
+          top: 15px;
+          right: 15px;
+          width: 30px;
+          height: 30px;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          cursor: pointer;
+          border-radius: 50%;
+          background-color: rgba(80, 80, 120, 0.4);
+          transition: background-color 0.3s ease;
+      }
+
+      .popup-close:hover {
+          background-color: #424242;
+      }
+
+      .popup-close::before,
+      .popup-close::after {
+          content: '';
+          position: absolute;
+          width: 15px;
+          height: 2px;
+          background-color: #424242;
+      }
+
+      .popup-close::before {
+          transform: rotate(45deg);
+      }
+
+      .popup-close::after {
+          transform: rotate(-45deg);
+      }
+
+      .popup-menu-title {
+          color: #ffffff;
+          font-size: 1.4rem;
+          margin-bottom: 30px;
+          text-align: center;
+          border-bottom: 1px solid rgba(200, 200, 255, 0.2);
+          padding-bottom: 15px;
+      }
+
+      .popup-menu-categories {
+          display: grid;
+          grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+          gap: 20px;
+      }
+
+      .popup-menu-category {
+          margin-bottom: 25px;
+      }
+
+      .category-title {
+          color: rgba(220, 220, 255, 0.9);
+          font-size: 1.1rem;
+          margin-bottom: 15px;
+          padding-left: 10px;
+          border-left: 3px solid #b8b8e5;
+      }
+
+      .link-item {
+          background-color: rgba(80, 80, 120, 0.4);
+          border-radius: 8px;
+          margin-bottom: 10px;
+          transition: all 0.3s ease;
+          overflow: hidden;
+      }
+
+      .link-item:hover {
+          background-color: rgba(100, 100, 150, 0.6);
+          transform: translateY(-3px);
+      }
+
+      .link-item a {
+          color: rgba(240, 240, 255, 0.9);
+          text-decoration: none;
+          display: block;
+          padding: 15px;
+          transition: color 0.3s ease;
+      }
+
+      .link-item a:hover {
+          color: #ffffff;
+      }
+
+      .popup-backdrop {
+          position: fixed;
+          top: 0;
+          left: 0;
+          width: 100%;
+          height: 100%;
+          background-color: rgba(30, 30, 40, 0.7);
+          z-index: 998;
+          opacity: 0;
+          visibility: hidden;
+          transition: opacity 0.3s ease;
+      }
+
+      .popup-backdrop.open {
+          opacity: 1;
+          visibility: visible;
+      }
+
+      @media (max-width: 768px) {
+          .popup-menu {
+              width: 90%;
+              padding: 20px;
+          }
+
+          .popup-menu-categories {
+              grid-template-columns: 1fr;
+          }
+
+          .resources-table-5 {
+              display: flex;
+              flex-direction: column;
+          }
+
+          .resources-table-5 tr {
+              display: flex;
+              flex-direction: column;
+          }
+
+          .resources-table-5 td {
+              margin: 5px 0;
+              width: 90%;
+          }
+      }
+  </style>
   <title>
     Image Page
   </title>
@@ -179,6 +428,149 @@
     };
   </script>
 
+
+<hr><!----------------------------------------------------------------- -->
+<p>code for pop up menu</p>
+    <!-- <div class="container-5" align=center>
+        <table class="resources-table-5" align=center style="width:90%;">
+            <tr>
+                <p class="highlights" align="center" style="color: rgba(240, 248, 255, 0.649);">Open Source Learning</p>
+
+            </tr>
+            <tr>
+                <td>
+                    <a href="page-depth-02\OSSU.html">
+                        OSSU<br> ( Open Source Society University )
+                    </a>
+
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <a href="https://pll.harvard.edu/" target="_blank">
+                        CS50 Courses from Harvard
+                    </a>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <a href="https://ocw.mit.edu/" target="_blank">
+                        Some MIT Courses?
+                    </a>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <a href="https://teachyourselfcs.com/" target="_blank">
+                        A written Guide to CS<br>( Teach Yourself CS )
+                    </a>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <a href="https://www.youtube.com/@OnnorokomPathshala/playlists" target="_blank">
+                        Onnorokom Pathshala
+                    </a>
+                </td>
+            </tr>
+        </table>
+        <p style="color: rgba(240, 248, 255, 0.649);">( Since I am but a humble fan )</p>
+    </div> -->
+
+
+<!-- 
+
+    <div class="container-5" align=center> -->
+        <!-- Menu Button inside container -->
+<!-- 
+        <table class="resources-table-5" align=center style="width:90%;">
+
+            <tr>
+                <td id="menuButton1" class="menu-button" align="center" style="color: rgba(240, 248, 255, 0.85);">
+                    <p class="highlights" align="center" style="color: rgba(240, 248, 255, 0.649);">Open Source Learning
+                    </p>
+
+                </td>
+
+            </tr>
+
+            <tr>
+                <td id="menuButton" class="menu-button" align="center" style="color: rgba(240, 248, 255, 0.85);">
+                    <p class="highlights" align="center" style="color: rgba(240, 248, 255, 0.649);">People I want to
+                        keep
+                        following</p>
+
+                </td>
+
+            </tr>
+
+        </table>
+    </div> -->
+
+    <!-- <div class="popup-menu" id="popupMenu">
+        <div class="popup-close" id="popupClose"></div>
+        <div class="popup-menu-title">Navigation Menu</div>
+
+        <div class="popup-menu-categories">
+            <div class="popup-menu-category">
+                <div class="category-title">Content Creators</div>
+                <div class="link-item">
+                    <a href="page-depth-02\OSSU.html">
+                        OSSU<br> ( Open Source Society University )
+                    </a>
+                </div>
+                <div class="link-item">
+                    <a href="https://thebigcb.com/" target="_blank">
+                        Code Bullet
+                    </a>
+                </div>
+                <div class="link-item">
+                    <a href="https://www.3blue1brown.com/" target="_blank">
+                        3blue1brown (Grant Sanderson)
+                    </a>
+                </div>
+                <div class="link-item">
+                    <a href="https://www.linkedin.com/in/md-maksudul-hossain-4300a095" target="_blank">
+                        Md Maksudul Hossain (Onnorokom Pathshala)
+                    </a>
+                </div>
+            </div>
+
+        </div>
+    </div> -->
+
+    <!-- Popup Menu (Center Modal) -->
+    <!-- <div class="popup-menu" id="popupMenu">
+        <div class="popup-close" id="popupClose"></div>
+        <div class="popup-menu-title">Navigation Menu</div>
+
+        <div class="popup-menu-categories">
+            <div class="popup-menu-category">
+                <div class="category-title">Content Creators</div>
+                <div class="link-item">
+                    <a href="https://github.com/ShahjalalShohag" target="_blank">
+                        youkn0wwho (Shahjalal Shohag)
+                    </a>
+                </div>
+                <div class="link-item">
+                    <a href="https://thebigcb.com/" target="_blank">
+                        Code Bullet
+                    </a>
+                </div>
+                <div class="link-item">
+                    <a href="https://www.3blue1brown.com/" target="_blank">
+                        3blue1brown (Grant Sanderson)
+                    </a>
+                </div>
+                <div class="link-item">
+                    <a href="https://www.linkedin.com/in/md-maksudul-hossain-4300a095" target="_blank">
+                        Md Maksudul Hossain (Onnorokom Pathshala)
+                    </a>
+                </div>
+            </div>
+
+        </div>
+    </div> -->
 
 
 
