--- a/page-depth-01/Curated-Resources.html
+++ b/page-depth-01/Curated-Resources.html
@@ -293,7 +293,7 @@
     <div class="container-5" align=center>
         <table class="resources-table-5" align=center style="width:90%;">
             <tr>
-                <p class="highlights" align="center" style="color: rgba(240, 248, 255, 0.649);">Curated-Resources</p>
+                <p class="highlights" align="center" style="color: rgba(240, 248, 255, 0.649);">Curated-Resources<br><br></p>
             </tr>
             <tr>
                 <td>
@@ -376,7 +376,7 @@
         <div class="popup-close popup-close-btn"></div>
         <!-- <div class="popup-menu-title">Content Creators</div> -->
         <div class="popup-menu-categories">
-            <div class="popup-menu-category">
+            <div class="popup-menu-category" align="center">
                 <!-- <div class="category-title">People I Follow</div> -->
                 <div class="link-item">
                     <a href="https://github.com/ShahjalalShohag" target="_blank">
