--- a/page-depth-01/CP-aux.html
+++ b/page-depth-01/CP-aux.html
@@ -321,7 +321,16 @@
                     <!-- <div class="menu-line"></div>
                     <div class="menu-line"></div>
                     <div class="menu-line"></div> -->
-                    <p class="highlights" align="center" style="color: rgba(240, 248, 255, 0.649);">Creators
+                    <p class="highlights" align="center" style="color: rgba(240, 248, 255, 0.649);">Online Tutorials
+                    </p>
+                </td>
+            </tr>
+            <tr><!-- 3rd container with different menu button -->
+                <td class="menu-button" id="menuButton3" align="center" style="color: rgba(240, 248, 255, 0.85);">
+                    <!-- <div class="menu-line"></div>
+                    <div class="menu-line"></div>
+                    <div class="menu-line"></div> -->
+                    <p class="highlights" align="center" style="color: rgba(240, 248, 255, 0.649);">UITS Tutorials
                     </p>
                 </td>
             </tr>
@@ -367,28 +376,39 @@
             <div class="popup-menu-category" align="center">
                 <!-- <div class="category-title">Coding Resources</div> -->
                 <div class="link-item">
-                    <a href="page-depth-02\OSSU.html">
-                        OSSU<br> ( Open Source Society University )
+                    <a href="https://www.youtube.com/@BroCodez">
+                       Bro Code @YT
                     </a>
                 </div>
                 <div class="link-item">
-                    <a href="https://pll.harvard.edu/" target="_blank">
-                        CS50 Courses from Harvard
+                    <a href="https://www.youtube.com/@Brackeys" target="_blank">
+                        Brackeys @YT
                     </a>
                 </div>
                 <div class="link-item">
-                    <a href="https://ocw.mit.edu/" target="_blank">
-                        Some MIT Courses?
+                    <a href="https://www.youtube.com/@cs50" target="_blank">
+                        CS50 @YT
+                    </a>
+                </div>
+                <!-- NOT STRICTLY PROGRAMMING -->
+                <!-- <div class="link-item">
+                    <a href="https://www.youtube.com/@3blue1brown" target="_blank">
+                        3blue1brown @YT
+                    </a>
+                </div> -->
+                <div class="link-item">
+                    <a href="https://www.youtube.com/@JennyslecturesCSIT" target="_blank">
+                        Jenny's lectures @YT
                     </a>
                 </div>
                 <div class="link-item">
-                    <a href="https://teachyourselfcs.com/" target="_blank">
-                        A written Guide to CS<br>( Teach Yourself CS )
+                    <a href="https://www.youtube.com/@freecodecamp" target="_blank">
+                        freecodecamp @YT
                     </a>
                 </div>
                 <div class="link-item">
-                    <a href="https://www.youtube.com/@OnnorokomPathshala/playlists" target="_blank">
-                        Onnorokom Pathshala
+                    <a href="https://www.youtube.com/@CSDojo" target="_blank">
+                        CSDojo @YT
                     </a>
                 </div>
                 <!-- More links here -->
@@ -397,6 +417,48 @@
     </div>
 
 
+<!-- 3rd popup menu with different content -->
+<div class="popup-menu" id="popupMenu3">
+    <div class="popup-close popup-close-btn"></div>
+    <!-- <div class="popup-menu-title">Resources & Tools</div> -->
+    <div class="popup-menu-categories">
+        <div class="popup-menu-category" align="center">
+            <!-- <div class="category-title">Coding Resources</div> -->
+            <div class="link-item">
+                <a href="https://www.youtube.com/@CPSAcademy">
+                   Sakib bhai (Batch-52) @YT
+                </a>
+            </div>
+            <div class="link-item">
+                <a href="https://www.youtube.com/@gowithhabib" target="_blank">
+                    Habibur Rahman (Batch-??) @YT
+                </a>
+            </div>
+            <div class="link-item">
+                <a href="https://www.youtube.com/@safridbhuiyan" target="_blank">
+                    Safrid Bhuiyan @YT
+                </a>
+            </div>
+            <div class="link-item">
+                <a href="#" target="_blank">
+                    #
+                </a>
+            </div>
+            <div class="link-item">
+                <a href="#" target="_blank">
+                    #
+                </a>
+            </div>
+            <div class="link-item">
+                <a href="#" target="_blank">
+                    #
+                </a>
+            </div>
+            <!-- More links here -->
+        </div>
+    </div>
+</div>
+
     <!-- Shared backdrop for all popups -->
     <div class="popup-backdrop" id="popupBackdrop"></div>
     <script>
@@ -404,7 +466,8 @@
             // Button and popup pairs
             const menuPairs = [
                 { button: 'menuButton1', popup: 'popupMenu1' },
-                { button: 'menuButton2', popup: 'popupMenu2' }
+                { button: 'menuButton2', popup: 'popupMenu2' },
+                { button: 'menuButton3', popup: 'popupMenu3' }
                 // Add more pairs as needed
             ];
 
