--- a/page-depth-01/CP-aux.html
+++ b/page-depth-01/CP-aux.html
@@ -436,7 +436,7 @@
             </div>
             <div class="link-item">
                 <a href="https://www.youtube.com/@safridbhuiyan" target="_blank">
-                    Safrid Bhuiyan @YT
+                    Safrid Bhuiyan (Batch-53) @YT
                 </a>
             </div>
             <div class="link-item">
