--- a/page-depth-01/CP-aux.html
+++ b/page-depth-01/CP-aux.html
@@ -359,8 +359,8 @@
                     </a>
                 </div>
                 <div class="link-item">
-                    <a href="#" target="_blank">
-                       #
+                    <a href="https://stackoverflow.com/questions" target="_blank">
+                        stackoverflow
                     </a>
                 </div>
                 <!-- More links here -->
