added another page for yt links

--- a/page-depth-01/CP-aux.html
+++ b/page-depth-01/CP-aux.html
@@ -376,41 +376,16 @@
             <div class="popup-menu-category" align="center">
                 <!-- <div class="category-title">Coding Resources</div> -->
                 <div class="link-item">
-                    <a href="https://www.youtube.com/@BroCodez">
-                       Bro Code @YT
+                    <a href="page-depth-02\YouTube-link.html">
+                       YouTube
                     </a>
                 </div>
                 <div class="link-item">
-                    <a href="https://www.youtube.com/@Brackeys" target="_blank">
-                        Brackeys @YT
+                    <a href="https://youkn0wwho.academy/" target="_blank">
+                        youkn0wwho <br>(Shahjalal Shohag)
                     </a>
                 </div>
-                <div class="link-item">
-                    <a href="https://www.youtube.com/@cs50" target="_blank">
-                        CS50 @YT
-                    </a>
-                </div>
-                <!-- NOT STRICTLY PROGRAMMING -->
-                <!-- <div class="link-item">
-                    <a href="https://www.youtube.com/@3blue1brown" target="_blank">
-                        3blue1brown @YT
-                    </a>
-                </div> -->
-                <div class="link-item">
-                    <a href="https://www.youtube.com/@JennyslecturesCSIT" target="_blank">
-                        Jenny's lectures @YT
-                    </a>
-                </div>
-                <div class="link-item">
-                    <a href="https://www.youtube.com/@freecodecamp" target="_blank">
-                        freecodecamp @YT
-                    </a>
-                </div>
-                <div class="link-item">
-                    <a href="https://www.youtube.com/@CSDojo" target="_blank">
-                        CSDojo @YT
-                    </a>
-                </div>
+               
                 <!-- More links here -->
             </div>
         </div>
