--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
   <div class="container-5" style="width:76%;">
     <table class="resources-table-5" align="center" style="width:90%;">
       <tr>
-        <p class="highlights-5" align="center" style="color: rgba(240, 248, 255, 0.649);">Browse Curated Resources</p>
+        <p class="highlights-5" align="center" style="color: rgba(240, 248, 255, 0.649);">Browse Resources</p>
       </tr>
       <tr>
         <td>
