--- a/page-depth-01/CP-aux.html
+++ b/page-depth-01/CP-aux.html
@@ -376,16 +376,36 @@
             <div class="popup-menu-category" align="center">
                 <!-- <div class="category-title">Coding Resources</div> -->
                 <div class="link-item">
-                    <a href="page-depth-02\YouTube-link.html">
-                       YouTube
+                    <a href="https://www.youtube.com/@BroCodez">
+                        Bro Code @YT
+                     </a>
+                </div>
+                <div class="link-item">
+                    <a href="https://www.youtube.com/@Brackeys" target="_blank">
+                        Brackeys @YT
                     </a>
                 </div>
                 <div class="link-item">
-                    <a href="https://youkn0wwho.academy/" target="_blank">
-                        youkn0wwho <br>(Shahjalal Shohag)
+                    <a href="https://www.youtube.com/@cs50" target="_blank">
+                        CS50 @YT
                     </a>
                 </div>
-               
+                <div class="link-item">
+                    <a href="https://www.youtube.com/@JennyslecturesCSIT" target="_blank">
+                        Jenny's lectures @YT
+                    </a>
+                </div>
+                <div class="link-item">
+                    <a href="https://www.youtube.com/@freecodecamp" target="_blank">
+                        freecodecamp @YT
+                    </a>
+                </div>
+                <div class="link-item">
+                    <a href="https://www.youtube.com/@CSDojo" target="_blank">
+                        CSDojo @YT
+                    </a>
+                </div>
+                
                 <!-- More links here -->
             </div>
         </div>
