--- a/page-depth-01/Curated-Resources.html
+++ b/page-depth-01/Curated-Resources.html
@@ -429,10 +429,14 @@
             </div>
             <div class="link-item">
                 <a href="https://ocw.mit.edu/" target="_blank">
-                    Some MIT Courses?
+                    Some MIT Courses
                 </a>
             </div>
-            
+            <div class="link-item">
+                <a href="https://home.edx.org/" target="_blank">
+                    edX<br>(Harvard and MIT)
+                </a>
+            </div>
             <div class="link-item">
                 <a href="https://stackexchange.com/" target="_blank">
                     stackexchange
