--- a/page-depth-01/References.html
+++ b/page-depth-01/References.html
@@ -180,7 +180,25 @@
                 </table>
             </div>
         </div>
+        <br>
 
+        <div class="university-resources" style="width:80%;">
+            <font size="5">
+                <p align="center">Other UITS Projects</p>
+            </font>
+            <div class="table-container">
+                <table>
+                    <tbody>
+                        <tr>
+                            <td>
+                                <a href="https://github.com/Learnathon-By-Geeky-Solutions/notorious-dhaka" target="_blank"
+                                    style="color:rgba(60, 60, 82, 0.733);">by Tamal's Team</a>
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
         <br>
 
         <div class="university-resources" align="center">
