--- a/page-depth-01/References.html
+++ b/page-depth-01/References.html
@@ -132,18 +132,19 @@
     <div class="topnav-1">
 
         <a class="active-1" href="Tutorials.html">
-          <small>Tutorials</small>
+            <small>Tutorials</small>
         </a>
         <a class="active-1" href="#">
-          <small>References</small>
+            <small>References</small>
         </a>
         <a class="active-1" href="https://b1tranger-coding.blogspot.com/">
-          <small>Blogs</small>
+            <small>Blogs</small>
         </a>
-        <a class="active-1" href="https://drive.google.com/drive/folders/1g93wCOUo4x0qvhNk_HHUb8Ozv_KuSLmL?usp=sharing" target="_blank">
-          <small>UITS<br>G-Drive</small>
+        <a class="active-1" href="https://drive.google.com/drive/folders/1g93wCOUo4x0qvhNk_HHUb8Ozv_KuSLmL?usp=sharing"
+            target="_blank">
+            <small>UITS<br>G-Drive</small>
         </a>
-      </div>
+    </div>
 
 
     <!-- BOTTOM BAR "navbar" -->
@@ -162,44 +163,55 @@
         <p id="top" align="right"><small><a href="#bottom" style="color:rgba(0, 0, 0, 0.24);">go to bottom</a></small>
         </p>-->
 
-        <div class="university-resources" style="width:80%;">
-            <font size="5">
-                <p align="center">Similar Projects ! !</p>
-            </font>
-            <div class="table-container">
-                <table>
-                    <tbody>
-                        <tr>
-                            <td>
-                                <a href=" http://akibreza.github.io/uitsBOT" target="_blank"
-                                    style="color:rgba(60, 60, 82, 0.733);">uitsBOT by Akib Reza
-                                    (0432220005101061)</a>
-                            </td>
-                        </tr>
-                    </tbody>
-                </table>
-            </div>
-        </div>
-        <br>
 
-        <div class="university-resources" style="width:80%;">
+        <div class="university-resources" align="center">
             <font size="5">
-                <p align="center">Other UITS Projects</p>
+                <p align="center">Student-Projects Collection</p>
             </font>
+            
             <div class="table-container">
                 <table>
+                    <thead>
+                        <tr>
+                            <th  style="text-align: center;">more<br> Resource-related<br> Projects</th>
+                        </tr>
+                    </thead>
                     <tbody>
                         <tr>
-                            <td>
-                                <a href="https://github.com/Learnathon-By-Geeky-Solutions/notorious-dhaka" target="_blank"
-                                    style="color:rgba(60, 60, 82, 0.733);">by Tamal's Team</a>
+                            <td style="text-align: center;">
+                                <a href=" http://akibreza.github.io/uitsBOT" target="_blank"
+                                    style="color:rgba(60, 60, 82, 0.733);">Akib Reza
+                                    (0432220005101061)<br>(uitsBOT for Notes, Utilities)</a>
                             </td>
+                        </tr>
+                    </tbody>
+                    <thead>
+                        <tr>
+                            <th style="text-align: center;">Other Projects</th>
+                        </tr>
+                    </thead>
+
+                    <tbody>
+                        <tr>
+                            <td style="text-align: center;"><a href="https://github.com/Learnathon-By-Geeky-Solutions/notorious-dhaka"
+                                    target="_blank" style="color:rgba(60, 60, 82, 0.733);">Tahmid Nasif Tamal's Team
+                                    (92114951008)<br>(Game for Geeky-Solutions Learnathon)</a></td>
+                        </tr>
+                        <tr>
+                            <td style="text-align: center;"><a href="https://github.com/backbencherstudio/Sleep-Soundscape"
+                                    target="_blank" style="color:rgba(60, 60, 82, 0.733);">Md. Safrid Bhuiyan (432310005101080)<br></a></td>
                         </tr>
                     </tbody>
                 </table>
             </div>
         </div>
-        <br>
+
+
+
+<br><br>
+
+
+
 
         <div class="university-resources" align="center">
             <font size="5">
