--- a/page-depth-01/References.html
+++ b/page-depth-01/References.html
@@ -173,12 +173,12 @@
                 <table>
                     <thead>
                         <tr>
-                            <th  style="text-align: center;">more<br> Resource-related<br> Projects</th>
+                            <th  colspan="2"  style="text-align: center;">more<br> Resource-related<br> Projects</th>
                         </tr>
                     </thead>
                     <tbody>
                         <tr>
-                            <td style="text-align: center;">
+                            <td colspan="2" style="text-align: center;">
                                 <a href=" http://akibreza.github.io/uitsBOT" target="_blank"
                                     style="color:rgba(60, 60, 82, 0.733);">Akib Reza
                                     (0432220005101061)<br>(uitsBOT for Notes, Utilities)</a>
@@ -187,21 +187,36 @@
                     </tbody>
                     <thead>
                         <tr>
-                            <th style="text-align: center;">Other Projects</th>
+                            <th  colspan="2" style="text-align: center;">Other Projects</th>
                         </tr>
                     </thead>
 
                     <tbody>
                         <tr>
-                            <td style="text-align: center;"><a href="https://github.com/Learnathon-By-Geeky-Solutions/notorious-dhaka"
+                            <td  colspan="2" style="text-align: center;"><a href="https://github.com/Learnathon-By-Geeky-Solutions/notorious-dhaka"
                                     target="_blank" style="color:rgba(60, 60, 82, 0.733);">Tahmid Nasif Tamal's Team
                                     (92114951008)<br>(Game for Geeky-Solutions Learnathon)</a></td>
                         </tr>
                         <tr>
-                            <td style="text-align: center;"><a href="https://github.com/backbencherstudio/Sleep-Soundscape"
-                                    target="_blank" style="color:rgba(60, 60, 82, 0.733);">Md. Safrid Bhuiyan (432310005101080)<br></a></td>
+                            <td  colspan="2" style="text-align: center;"><a href="#"
+                                    target="_blank" style="color:rgba(60, 60, 82, 0.733);">Md. Safrid Bhuiyan (432310005101080)<br>(Scout App??)</a></td>
                         </tr>
-                    </tbody>
+                        <tr >
+                            <td style="text-align: center;"><a style="color:rgba(60, 60, 82, 0.733);" href="https://docs.google.com/spreadsheets/d/1sGu5Q1UzvJuvuN7fANceK0B9YNBM2Ibk/edit?gid=1309112686#gid=1309112686" target="_blank">WAD projects of Batch 54</a>
+                                    
+                            </td>
+                            <td>
+                                <div class="feature-list">
+                                       
+                                    <ul style="color:rgba(60, 60, 82, 0.733);">Highlights:
+                                        <li><a style="color:rgba(60, 60, 82, 0.733);" href="#" target="_blank">Student #1</a></li>
+                                        <li><a style="color:rgba(60, 60, 82, 0.733);" href="#" target="_blank">Student #2</a></li>
+                                        <li><a style="color:rgba(60, 60, 82, 0.733);" href="#" target="_blank">Student #3</a></li>
+                                    </ul>
+                                </div>
+                            </td>
+                        </tr>
+                    <!-- </tbody> -->
                 </table>
             </div>
         </div>
@@ -215,7 +230,7 @@
 
         <div class="university-resources" align="center">
             <font size="5">
-                <p align="center">University Resources Directory</p>
+                <p align="center">University Resources Record</p>
             </font>
             <p align="center" style="color:rgba(0, 0, 0, 0.393);">(Other Universities doing skibidi)</p>
             <div class="table-container">
@@ -228,6 +243,13 @@
                         </tr>
                     </thead>
                     <tbody>
+                        <tr>
+                            <td>SUST</td>
+                            <td>-</td>
+                            <td>
+                                -
+                            </td>
+                        </tr>
                         <tr>
                             <td>UIU</td>
                             <td>-</td>
