--- a/index.html
+++ b/index.html
@@ -26,13 +26,13 @@
   <div class="topnav-1">
 
     <a class="active-1" href="page-depth-01/Tutorials.html">
-      <small>Tutorials</small>
+      <small>Resources<br>Tutorials</small>
     </a>
     <a class="active-1" href="page-depth-01/References.html">
-      <small>References</small>
+      <small>Project<br>References</small>
     </a>
     <a class="active-1" href="https://b1tranger-coding.blogspot.com/">
-      <small>Blogs</small>
+      <small>CSE<br>Blogs</small>
     </a>
     <a class="active-1" href="https://drive.google.com/drive/folders/1g93wCOUo4x0qvhNk_HHUb8Ozv_KuSLmL?usp=sharing"
       target="_blank">
