--- a/page-depth-01/page-depth-02/S07.html
+++ b/page-depth-01/page-depth-02/S07.html
@@ -16,18 +16,20 @@
   <div class="topnav-1">
 
     <a class="active-1" href="../Tutorials.html">
-      <small>Tutorials</small>
+        <small>Resources<br>Tutorials</small>
     </a>
     <a class="active-1" href="../References.html">
-      <small>References</small>
+        <small>Project<br>References</small>
     </a>
     <a class="active-1" href="https://b1tranger-coding.blogspot.com/">
-      <small>Blogs</small>
+        <small>CSE<br>Blogs</small>
     </a>
-    <a class="active-1" href="https://drive.google.com/drive/folders/1g93wCOUo4x0qvhNk_HHUb8Ozv_KuSLmL?usp=sharing" target="_blank">
-      <small>UITS<br>G-Drive</small>
+    <a class="active-1" href="https://drive.google.com/drive/folders/1g93wCOUo4x0qvhNk_HHUb8Ozv_KuSLmL?usp=sharing"
+        target="_blank">
+        <small>UITS<br>G-Drive</small>
     </a>
-  </div>
+</div>
+
 
 
   <!-- BOTTOM BAR "navbar" -->
