added link to CSE-blogs

--- a/page-depth-01/CSE-Blogs.html
+++ b/page-depth-01/CSE-Blogs.html
@@ -264,7 +264,7 @@
         <a class="active-1" href="References.html">
           <small>Project<br>References</small>
         </a>
-        <a class="active-1" href="CSE-blogs.html">
+        <a class="active-1" href="#">
           <small>CSE<br>Blogs</small>
         </a>
         <a class="active-1" href="https://drive.google.com/drive/folders/1g93wCOUo4x0qvhNk_HHUb8Ozv_KuSLmL?usp=sharing" target="_blank">
@@ -272,7 +272,7 @@
         </a>
       </div>
 
-
+<h1>THIS IS BLOGS</h1>
     <!-- BOTTOM BAR "navbar" -->
 
     <div style="padding-left:16px">
