--- a/page-depth-01/page-depth-02/S02.html
+++ b/page-depth-01/page-depth-02/S02.html
@@ -21,7 +21,7 @@
   <a class="active-1" href="../References.html">
       <small>Project<br>References</small>
   </a>
-  <a class="active-1" href="https://b1tranger-coding.blogspot.com/">
+  <a class="active-1" href="../CSE-Blogs.html">
       <small>CSE<br>Blogs</small>
   </a>
   <a class="active-1" href="https://drive.google.com/drive/folders/1g93wCOUo4x0qvhNk_HHUb8Ozv_KuSLmL?usp=sharing"
