--- a/page-depth-01/References.html
+++ b/page-depth-01/References.html
@@ -201,9 +201,9 @@
                     <tbody>
                         <tr>
                             <td colspan="2" style="text-align: center;"><a
-                                    href="https://github.com/Learnathon-By-Geeky-Solutions/notorious-dhaka"
+                                    href="https://github.com/tahmidnasiftamal/DataMiningProject"
                                     target="_blank" style="color:rgba(60, 60, 82, 0.733);">Tahmid Nasif Tamal
-                                    (92114951008)<br>(Notorious Dhaka's Game<br> for Geeky-Solutions Learnathon)</a>
+                                    (92114951008)<br>(Search Engine for Data Mining)</a>
                             </td>
                         </tr>
                         <tr>
