--- a/page-depth-01/Curated-Resources.html
+++ b/page-depth-01/Curated-Resources.html
@@ -257,7 +257,7 @@
 
     <!-- TOP BAR -->
 
-    < <div class="topnav-1">
+    <div class="topnav-1">
 
         <a class="active-1" href="Tutorials.html">
           <small>Resources<br>Tutorials</small>
