--- a/index.html
+++ b/index.html
@@ -148,9 +148,9 @@
           Online
           Resources for the <i>students</i> of UITS. I will be primarily working on <a
             href="https://github.com/b1tranger/oUITS-Resources" target="_blank"
-            style="color:rgba(4, 0, 128, 0.806);">GitHub's
-            Hosting</a> ( mirror: <a href="https://uits-res.netlify.app/"
-            style="color:rgba(4, 0, 128, 0.806);">Netlify</a> ).<br>Most of the materials here are publicly available and
+            style="color:rgba(4, 0, 128, 0.806);">GitHub</a>( mirror: <a href="https://uits-res.netlify.app/"
+            style="color:rgba(4, 0, 128, 0.806);">Netlify</a> and <a href="https://b1tranger.github.io/oUITS-Resources/"
+            style="color:rgba(4, 0, 128, 0.806);"> Github </a> ). Most of the materials here are publicly available and
           you are free to modify and reuse them
           but
           please be mindful of possible Legal issues (like Copyright materials)</small></p>
