--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 
         <div class="topnav-3">
           <h2>
-            <p align=center style="color:rgba(255, 255, 255, 0.776);">Latest Blog</p>
+            <p align=center style="color:rgba(255, 255, 255, 0.776);">my latest blog</p>
           </h2>
         </div>
 
