--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <small>Project<br>References</small>
     </a>
     <a class="active-1" href="page-depth-01\CSE-Blogs.html">
-      <small>CSE<br>Blogs</small>
+      <small>CSE<br>Blog</small>
     </a>
     <a class="active-1" href="https://drive.google.com/drive/folders/1g93wCOUo4x0qvhNk_HHUb8Ozv_KuSLmL?usp=sharing"
       target="_blank">
