--- a/page-depth-01/page-depth-02/S03.html
+++ b/page-depth-01/page-depth-02/S03.html
@@ -24,7 +24,7 @@
         <small>Project<br>References</small>
     </a>
     <a class="active-1" href="../CSE-Blogs.html">
-        <small>CSE<br>Blogs</small>
+        <small>CSE<br>Blog</small>
     </a>
     <a class="active-1" href="https://drive.google.com/drive/folders/1g93wCOUo4x0qvhNk_HHUb8Ozv_KuSLmL?usp=sharing"
         target="_blank">
