--- a/page-depth-01/page-depth-02/S08.html
+++ b/page-depth-01/page-depth-02/S08.html
@@ -12,7 +12,7 @@
 <body>
 
  <!-- TOP BAR -->
-  
+
  <div class="topnav-1">
 
   <a class="active-1" href="../Tutorials.html">
@@ -22,7 +22,7 @@
       <small>Project<br>References</small>
   </a>
   <a class="active-1" href="../CSE-Blogs.html">
-      <small>CSE<br>Blogs</small>
+      <small>CSE<br>Blog</small>
   </a>
   <a class="active-1" href="https://drive.google.com/drive/folders/1g93wCOUo4x0qvhNk_HHUb8Ozv_KuSLmL?usp=sharing"
       target="_blank">
