--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <a class="active-1" href="page-depth-01/References.html">
       <small>Project<br>References</small>
     </a>
-    <a class="active-1" href="page-depth-01\CSE-Blogs.html">
+    <a class="active-1" href="page-depth-01\CSE-Blog.html">
       <small>CSE<br>Blog</small>
     </a>
     <a class="active-1" href="https://drive.google.com/drive/folders/1g93wCOUo4x0qvhNk_HHUb8Ozv_KuSLmL?usp=sharing"
